@@ -18,6 +18,7 @@ widelands (1:19+repack-1widelands1) UNRELEASED; urgency=medium
     - Translations for appdata and desktop file.
     - Re-added font entries to copyright file, since we will most likely be using
       the embedded fonts.
+    - Modified rules to use our embedded fonts and install all binaries.
 
  -- Widelands <widelands-dev@lists.launchpad.net>  Sun, 20 Nov 2016 11:03:07 +0100
 
